[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
]
